crates/plotnik-tests/tests/02-parser/recovery_validation/lowercase_alternative_labels_cascade.txt
Q = [
  left: (a)
  right: (b)
]
------------------ DIAGNOSTICS -------------------
error: alternative labels must be PascalCase
 --> query.ptk:2:3
  |
2 |   left: (a)
  |   ^^^^
  |
help: use `Left`
  |
2 -   left: (a)
2 +   Left: (a)
  |
help: alternative labels name variant cases when the alternation produces a value

error: alternative labels must be PascalCase
 --> query.ptk:3:3
  |
3 |   right: (b)
  |   ^^^^^
  |
help: use `Right`
  |
3 -   right: (b)
3 +   Right: (b)
  |
help: alternative labels name variant cases when the alternation produces a value
